[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyesm"
version = "0.3.1"
description = "Fast, Python-native, npm-free ESM dependency vendoring with import maps and Subresource Integrity"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "novucs" }]
keywords = ["esm", "importmap", "cdn", "jsdelivr", "django", "static", "sri"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.27",
    "tomlkit>=0.13",
    "semantic-version>=2.10",
    "resolvelib>=1.0",
]

[project.optional-dependencies]
django = ["Django>=4.2"]

[project.scripts]
pyesm = "pyesm.cli:main"

[project.urls]
Homepage = "https://github.com/novucs/pyesm"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "Django>=4.2",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyesm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests favor terse setup and intentionally import for side effects.
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pyesm", "fake_cdn"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
